# newsdata.io-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/newsdata_mcp/: app.py  client.py  config.py  server.py
